# secunit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md
crates/secunit-capture/: Cargo.toml
crates/secunit-capture/schemas/: capture-deps-pip-audit.schema.json  capture-deps-pnpm-audit.schema.json  capture-envelope.schema.json  capture-github-audit-log.schema.json  capture-github-codeql-alerts.schema.json  capture-github-dependabot-alerts.schema.json  capture-github-org-members.schema.json
crates/secunit-capture/src/: canonical.rs  lib.rs  schema.rs  time.rs
crates/secunit-capture/src/github/: audit_log.rs  branch_protection.rs  codeql_alerts.rs  dependabot_alerts.rs  mod.rs  org_members.rs
crates/secunit-capture/tests/: fixtures.rs
crates/secunit-cli/: Cargo.toml
crates/secunit-cli/src/: cmd.rs  main.rs
crates/secunit-cli/src/cmd/: capture.rs  coverage.rs  doctor.rs  due.rs  features.rs  inventory.rs  registry.rs  report.rs  risks.rs  run.rs  scope.rs  show.rs  skills.rs  status.rs  validate.rs  verify.rs  wisp.rs
crates/secunit-cli/tests/: bootstrap.rs  doctor.rs  golden.rs  risks.rs  skills.rs  wisp.rs
crates/secunit-cli/tests/snapshots/: golden__due_within_14_days_human.snap  golden__due_within_14_days_json.snap  golden__report_data_month_json.snap  golden__report_data_week_json.snap  golden__scope_sca_human.snap  golden__scope_sca_post_retirement.snap  golden__show_sca_human.snap  golden__status_evidence_found_human.snap  golden__status_evidence_found_json.snap  golden__status_evidence_missing_file_human.snap  golden__status_evidence_never_run_human.snap  golden__validate_clean_fixture.snap
crates/secunit-core/: Cargo.toml
crates/secunit-core/schemas/: _config.schema.json  inventory.schema.json  prepare.schema.json  risk-event.schema.json  risk-index.schema.json
crates/secunit-core/skills/: capture-sweep.md  inventory-seed.md  report.md
crates/secunit-core/src/: evidence.rs  lib.rs  model.rs  registry.rs  reports.rs  risks.rs  schemas.rs  skills.rs
crates/secunit-core/src/evidence/: hasher.rs  lock.rs  manifest.rs  runner.rs  verifier.rs
crates/secunit-core/src/registry/: coverage.rs  loader.rs  period.rs  resolver.rs
crates/secunit-core/src/risks/: fold.rs  model.rs  store.rs  tests.rs
crates/secunit-core/src/wisp/: doc.rs  markdown.rs  mod.rs  scaffold.rs  source.rs  template.rs  typst_emit.rs
crates/secunit-core/src/wisp/assets/fonts/: README.md
crates/secunit-core/src/wisp/assets/typst/: cover.typ  footer.typ  header.typ  theme.typ  toc.typ
crates/secunit-core/src/wisp/render/: mod.rs  typst.rs
crates/secunit-core/tests/: registry_load.rs  reports.rs  resolver.rs  risks_prop.rs  run_lifecycle.rs  schema_examples.rs
crates/secunit-gui/: .gitignore  Cargo.toml  NOTES.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tauri.conf.json  vite.config.ts
crates/secunit-gui/.pnpm-store/v10/index/00/: e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
crates/secunit-gui/.pnpm-store/v10/index/02/: ea7b69439fa5b01483644e38937a230e5ff43301973bb4988926fe66a52d01-@babel+code-frame@7.29.7.json  f6da08b38ed8eb70fe55b96e687d77f58475c0c5750a766766541f7a57f54d-yaml@2.8.3.json
crates/secunit-gui/jobs/: JOB-01-scaffold.md  JOB-02-project-config.md  JOB-03-ipc-core.md  JOB-04-watcher.md  JOB-05-shell.md  JOB-06-overview.md  JOB-07-controls.md  JOB-08-schedule.md  JOB-09-findings.md  JOB-10-evidence.md  JOB-11-inventory.md  JOB-12-command-bar.md  JOB-13-readonly-audit.md
crates/secunit-gui/src/: App.tsx  api.rs  lib.rs  main.rs  projects.rs  search.rs  state.rs  styles.css
crates/secunit-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/secunit-gui/src-tauri/capabilities/: default.json
crates/secunit-gui/src-tauri/icons/: icon.icns
crates/secunit-gui/src-tauri/src/: lib.rs  projects.rs  sanitiser.rs  search.rs  watcher.rs
crates/secunit-gui/src-tauri/src/api/: mod.rs  projects_cmd.rs  registry_cmd.rs  risks_cmd.rs  types.rs
crates/secunit-gui/src-tauri/tests/: api_smoke.rs  readonly.rs
crates/secunit-gui/src/__tests__/: App.test.tsx  AppShell.test.tsx  Badge.test.tsx  CommandPalette.test.tsx  Controls.test.tsx  Evidence.test.tsx  Findings.test.tsx  Inventory.test.tsx  Overview.test.tsx  Risks.test.tsx  Schedule.test.tsx  store.test.ts
crates/secunit-gui/src/api/: registry_cmd.rs  types.rs
crates/secunit-gui/src/components/: AlertStrip.tsx  AppShell.tsx  ArtifactPreview.tsx  Calendar.tsx  CommandPalette.tsx  ControlsTable.tsx  EmptyConfig.tsx  ErrorCard.tsx  FindingCard.tsx  FindingsFilters.tsx  FocusList.tsx  HealthTile.tsx  HowAmIDoing.tsx  ProjectSwitcher.tsx  RiskDetail.tsx  RisksTable.tsx  RunSummary.tsx  RunTimeline.tsx  RunTree.tsx  ScheduleList.tsx  StatusBadge.tsx  charts.tsx
crates/secunit-gui/src/components/ui/: Badge.tsx  Card.tsx  Input.tsx  Kbd.tsx  Label.tsx  Select.tsx  Separator.tsx  Table.tsx  Tabs.tsx  index.ts
crates/secunit-gui/src/lib/: controlStatus.ts  ipc.ts  risks.ts  time.ts
crates/secunit-gui/src/routes/: Controls.tsx  Evidence.tsx  Findings.tsx  Overview.tsx  Placeholder.tsx  Risks.tsx  Schedule.tsx
crates/secunit-gui/src/store/: events.ts  index.ts
crates/secunit-gui/tests/: api_smoke.rs  readonly.rs
crates/secunit-gui/web/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/secunit-gui/web/src/: App.tsx
crates/secunit-gui/web/src/__tests__/: App.test.tsx  AppShell.test.tsx  CommandPalette.test.tsx  Controls.test.tsx  Overview.test.tsx  Schedule.test.tsx  setup.ts
crates/secunit-gui/web/src/components/: AppShell.tsx  CommandPalette.tsx  ControlDetail.tsx  ControlsTable.tsx  FindingsFilters.tsx  HealthTile.tsx  ProjectSwitcher.tsx  RunTimeline.tsx  ScheduleList.tsx  StatusBadge.tsx
crates/secunit-gui/web/src/lib/: ipc.ts
crates/secunit-gui/web/src/routes/: Controls.tsx  Evidence.tsx  Findings.tsx  Inventory.tsx  Overview.tsx  Schedule.tsx
crates/secunit-gui/web/src/store/: events.ts  index.ts  wire.ts
(+290 files in other folders)
