[package]
name = "secunit-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
description = "Native upstream capturers for secunit (gated behind cargo features)."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
secunit-core.workspace = true
jsonschema.workspace = true

# `deps` feature
tokio = { version = "1", features = ["rt", "macros", "process"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rustsec = { version = "0.30", default-features = false, features = ["gix-reqwest"], optional = true }

# `github` feature
octocrab = { version = "0.41", default-features = false, features = ["default-client", "rustls", "rustls-ring"], optional = true }

[features]
default = []
aws = []
github = ["dep:octocrab", "dep:tokio", "dep:reqwest"]
deps = ["dep:reqwest", "dep:rustsec", "dep:tokio"]
http = ["dep:reqwest", "dep:tokio"]
gcp = []

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
