[package]
name = "secunit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "secunit binary — agent helper for registry inspection, run orchestration, and capture."

[[bin]]
name = "secunit"
path = "src/main.rs"

[dependencies]
secunit-core.workspace = true
secunit-capture.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
