[package]
name = "bcl-secunit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
description = "secunit binary — agent helper for registry inspection, run orchestration, and capture."
keywords = ["security", "registry", "verification", "cli", "secunit"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/secunit-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "secunit{ binary-ext }"

[[bin]]
name = "secunit"
path = "src/main.rs"

[dependencies]
secunit-core.workspace = true
secunit-capture.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["deps", "github", "aws"]
deps = ["secunit-capture/deps"]
github = ["secunit-capture/github"]
# `aws` is a placeholder until Phase 5 — expose the feature flag so
# skills declaring `requires_features: [aws]` validate cleanly, but no
# AWS capturers are compiled in yet.
aws = ["secunit-capture/aws"]
http = ["secunit-capture/http"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta.workspace = true
tempfile.workspace = true
