[package]
name = "secunit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Registry, evidence, hashing, and verification primitives for secunit."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
jsonschema.workspace = true
walkdir.workspace = true
fs2.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
walkdir.workspace = true
serde_yaml.workspace = true
